--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
- language: python
- python:
-    - "3.7.1"
+language: python
+sudo: required
+dist: xenial
+python: "3.7"
 
  install:
     - pip install pipenv
