--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,8 +2,10 @@ version: 2
 jobs:
   build:
     working_directory: ~/circleci-demo-python-django
-      docker:
-      - image: circleci/python:3.7.1
+    docker:
+       - image: circleci/python:3.6.4
+         environment:
+           PIPENV_VENV_IN_PROJECT: true
     steps:
       - checkout  # checkout source code to working directory
       - run:
