--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,7 @@ jobs:
             sudo dpkg -i cf-cli_amd64.deb
             cf -v
             cf api https://api.run.pivotal.io  # alternately target your private Cloud Foundry deployment
-            cf auth agate.ashu1@gmail.com welcome12#
+            cf auth agate.ashu1@gmail.com Welcome12#
             cf target -o ashu1-org -s development
       - run:
           name: Re-route live Domain to latest
