--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,5 +27,5 @@ jobs:
           command: |
                 # Send "real" url to new version
                 cf delete exchange-rates-task1 -f
-                cf push exchange-rates-task1 -b python_buildpack -c "waitress-serve --port=$PORT DJANGO-WEB-APP.wsgi:exchange-rates-task1"
+                cf push exchange-rates-task1 -b python_buildpack
                 cf map-route exchange-rates-task1 cfapps.io -n exchange-rates-task1
